[gd_scene load_steps=14 format=3 uid="uid://dn5anqfde4uou"]

[ext_resource type="Script" path="res://scripts/ingame_menu.gd" id="1_jn1wx"]
[ext_resource type="Texture2D" uid="uid://01au4jaredsl" path="res://testures/Buttons/OptionsDefault.png" id="2_g8uha"]
[ext_resource type="Texture2D" uid="uid://dlft6sdvb47yh" path="res://testures/Buttons/OptionsPressed.png" id="3_d1no7"]
[ext_resource type="Texture2D" uid="uid://bhw2sosem4u8t" path="res://testures/Buttons/OptionsHover.png" id="4_2qrqs"]
[ext_resource type="Texture2D" uid="uid://bj3qhiro764w3" path="res://testures/Buttons/OptionsSelected.png" id="5_kcr7w"]
[ext_resource type="Texture2D" uid="uid://bjn4e3cm082y6" path="res://testures/Buttons/DisconnectDefault.png" id="6_6rhid"]
[ext_resource type="Texture2D" uid="uid://dnmsryr7w0be6" path="res://testures/Buttons/DisconnectPressed.png" id="7_e8hqd"]
[ext_resource type="Texture2D" uid="uid://b26kf7qv7p7hu" path="res://testures/Buttons/DisconnectHover.png" id="8_kc3vy"]
[ext_resource type="Texture2D" uid="uid://ruswxg435lbt" path="res://testures/Buttons/DisconnedSelected.png" id="9_dhv47"]
[ext_resource type="Texture2D" uid="uid://3kdb2hb5knuf" path="res://testures/Buttons/BackDefault.png" id="10_56o7b"]
[ext_resource type="Texture2D" uid="uid://rn8ktm1mhnia" path="res://testures/Buttons/BackPressed.png" id="11_i0sis"]
[ext_resource type="Texture2D" uid="uid://dbwwmmpc7qm1l" path="res://testures/Buttons/BackHover.png" id="12_jub2q"]
[ext_resource type="Texture2D" uid="uid://d0db48y8djbxd" path="res://testures/Buttons/BackSelected.png" id="13_jbaa6"]

[node name="IngameMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_jn1wx")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.5
offset_top = -158.0
offset_right = 155.5
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00131, 0.994725)
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 60
text = "Menu"
horizontal_alignment = 1

[node name="Options" type="TextureButton" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
texture_normal = ExtResource("2_g8uha")
texture_pressed = ExtResource("3_d1no7")
texture_hover = ExtResource("4_2qrqs")
texture_focused = ExtResource("5_kcr7w")

[node name="Disconnect" type="TextureButton" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
texture_normal = ExtResource("6_6rhid")
texture_pressed = ExtResource("7_e8hqd")
texture_hover = ExtResource("8_kc3vy")
texture_focused = ExtResource("9_dhv47")

[node name="Back" type="TextureButton" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
texture_normal = ExtResource("10_56o7b")
texture_pressed = ExtResource("11_i0sis")
texture_hover = ExtResource("12_jub2q")
texture_focused = ExtResource("13_jbaa6")

[node name="paddingl" type="Control" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[connection signal="pressed" from="MarginContainer/MarginContainer/CenterContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/CenterContainer/VBoxContainer/Disconnect" to="." method="_on_disconnect_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/CenterContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
